@@ -661,6 +661,12 @@ go to previous directory entry or do nothing.
 .TP
 .BI ]d
 go to next directory entry or do nothing.
+.TP
+.BI [s
+go to previous selected entry or do nothing.
+.TP
+.BI ]s
+go to next selected entry or do nothing.
 .\" ---------------------------------------------------------------------------
 .SH Using Count
 .\" ---------------------------------------------------------------------------
