@@ -218,6 +218,8 @@ static void cmd_left_paren(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_right_paren(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_lb_d(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_rb_d(key_info_t key_info, keys_info_t *keys_info);
+static void cmd_lb_s(key_info_t key_info, keys_info_t *keys_info);
+static void cmd_rb_s(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_left_curly_bracket(key_info_t key_info, keys_info_t *keys_info);
 static void cmd_right_curly_bracket(key_info_t key_info,
 		keys_info_t *keys_info);
@@ -379,6 +381,8 @@ static keys_add_info_t builtin_cmds[] = {
 	{WK_RP,            {{&cmd_right_paren}, .descr = "go to next group of files"}},
 	{WK_LB WK_d,       {{&cmd_lb_d}, .descr = "go to previous dir"}},
 	{WK_RB WK_d,       {{&cmd_rb_d}, .descr = "go to next dir"}},
+	{WK_LB WK_s,       {{&cmd_lb_s}, .descr = "go to previous selected entry"}},
+	{WK_RB WK_s,       {{&cmd_rb_s}, .descr = "go to next selected entry"}},
 	{WK_LCB,           {{&cmd_left_curly_bracket},  .descr = "go to previous file/dir group"}},
 	{WK_RCB,           {{&cmd_right_curly_bracket}, .descr = "go to next file/dir group"}},
 #ifndef _WIN32
@@ -431,6 +435,8 @@ static keys_add_info_t selectors[] = {
 	{WK_RP,      {{&cmd_right_paren}, .descr = "to next group of files"}},
 	{WK_LB WK_d, {{&cmd_lb_d}, .descr = "go to previous dir"}},
 	{WK_RB WK_d, {{&cmd_rb_d}, .descr = "go to next dir"}},
+	{WK_LB WK_s, {{&cmd_lb_s}, .descr = "go to previous selected entry"}},
+	{WK_RB WK_s, {{&cmd_rb_s}, .descr = "go to next selected entry"}},
 	{WK_LCB,     {{&cmd_left_curly_bracket},  .descr = "to previous file/dir group"}},
 	{WK_RCB,     {{&cmd_right_curly_bracket}, .descr = "to next file/dir group"}},
 #ifdef ENABLE_EXTENDED_KEYS
@@ -1969,6 +1975,21 @@ static void
 cmd_rb_d(key_info_t key_info, keys_info_t *keys_info)
 {
 	pick_or_move(keys_info, flist_next_dir(curr_view));
+}
+
+/* Go to or pick files until and including previous selected entry or do
+ * nothing. */
+static void
+cmd_lb_s(key_info_t key_info, keys_info_t *keys_info)
+{
+	pick_or_move(keys_info, flist_prev_selected(curr_view));
+}
+
+/* Go to or pick files until and including next selected entry or do nothing. */
+static void
+cmd_rb_s(key_info_t key_info, keys_info_t *keys_info)
+{
+	pick_or_move(keys_info, flist_next_selected(curr_view));
 }
 
 /* Moves cursor to the beginning of the previous group of files defined by them
