@@ -426,7 +426,9 @@ const char *tags[] = {
 	"vifm-ZZ",
 	"vifm-[count]",
 	"vifm-[d",
+	"vifm-[s",
 	"vifm-]d",
+	"vifm-]s",
 	"vifm-^",
 	"vifm-al",
 	"vifm-app.txt",
